<resources>
    <string name="app_name">ExerciseTracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="workout">Workout</string>
    <string name="history">Workout History</string>
    <string name="statistics">Statistics</string>

    <!--    Workout-->
    <string name="workout_continueWorkout">Continue Workout</string>
    <string name="workout_startWorkout">Start Workout</string>
    <string name="workout_setGoal">Set Goal</string>
    <string name="workout_startRun">Start Workout</string>
    <string name="workout_pauseRun">Pause Workout</string>
    <string name="workout_resumeRun">Resume Workout</string>
    <string name="workout_stopRun">Stop Workout</string>
    <string name="workout_type_of_exercise">Type of Exercise</string>
    <string name="workoutGoal_km">Kilometers</string>
    <string name="workoutGoal_minutes">Minutes</string>
    <string name="workoutGoal_requiredField">Required Field</string>
    <string name="workoutDialog_title">Would you like to save workout?</string>
    <string name="workoutDialog_content">Add workout to list of workouts</string>
    <string name="workoutOnGoing_defaultTime">00:00:00:00</string>
    <string name="workoutOnGoing_defaultKilometer">0.00 km</string>
    <string name="workoutOnGoing_locationOffTitle">Turn on GPS</string>
    <string name="workoutOnGoing_locationOffMessage">The application cannot function properly without GPS turned on</string>
    <string name="workoutOnGoing_locationOffSettings">Settings</string>

    <!--    History-->
    <string name="workoutHistoryRV_time"><b>Time:</b>\n%1$s</string>
    <string name="workoutHistoryRV_distance"><b>Distance:</b>\n%1$s</string>
    <string name="workoutHistoryRV_speed"><b>Avg. Speed:</b>\n%1$s km/h</string>
    <string name="historyMenu_sort">Sort</string>
    <string name="historyMenu_filter">Filter</string>
    <string name="historyMenu_dateRange">Date Range</string>
    <string name="workoutHistory_menuDateRange">Select Range</string>
    <string name="workoutHistory_menuSortTitle">Sort by</string>
    <string name="workoutHistory_menuFilterTitle">Filter by</string>
    <string name="workoutHistory_snackBarDelete">Workout Deleted</string>
    <string name="workoutHistory_snackBarUndo">Undo</string>
    <string name="workoutHistoryPolyline_start">START</string>
    <string name="workoutHistoryPolyline_end">END</string>


    <!--    Notifications-->
    <string name="notification_group">Run Tracker Application</string>
    <string name="notification_title">Run Tracker Application</string>
    <string name="notification_defaultTime">00:00:00</string>

    <!--Global-->
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>

    <!--    Map Polyline-->
    <string name="workoutHistory_time">Time</string>
    <string name="workoutHistory_distance">Distance</string>
    <string name="workoutHistory_mode">Type of Exercise</string>


    <!--    Statistics-->
    <string name="workoutStatistics_dateMenu">Date Range</string>
    <string name="workoutStatisticsBar_title">Bar Chart</string>
    <string name="workoutStatisticsLine_title">Line Chart</string>
    <string name="workoutStatisticsPie_title">Pie Chart</string>
    <string name="workoutStatisticsCombined_title">Combined Chart</string>
    <string name="exerciseType">Exercise Type</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="speed">Speed</string>

    <string name="workout_details">Workout Details</string>
    <string name="lineChart_startDate">Workout Date: %1$s</string>
    <string name="lineChart_workout">Workout Type: %1$s</string>
    <string name="lineChart_km">Distance: %1$s</string>
    <string name="lineChart_minutes">Workout Duration: %1$s</string>
    <string name="lineChart_avgSpeed">Average Speed: %1$s</string>




</resources>