<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.example.exercisetracker.bottomNavFragments.statistics.charts.StatisticsLineChart">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/statisticsLineChart_toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_navigate_back_24"
        app:title="@string/workoutStatisticsLine_title" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/statisticsLineChart_chart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/statisticsLineChart_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/distance" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/statisticsLineChart_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/time" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/statisticsLineChart_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/speed" />
        </LinearLayout>

        <include
            android:id="@+id/statisticsLineChart_details"
            layout="@layout/layout_statistics_line_chart"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="0dp"/>

    </LinearLayout>
</LinearLayout>