<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.example.exercisetracker.bottomNavFragments.statistics.charts.StatisticsBarChart">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/statisticsBarChart_toolBar"
        app:navigationIcon="@drawable/ic_navigate_back_24"
        app:title="@string/workoutStatisticsBar_title"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/statisticsBarChart_chart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RadioGroup
        android:layout_weight="1"
        android:id="@+id/statisticsBarChart_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/statisticsBarChart_distance"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/statisticsBarChart_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"/>

    </RadioGroup>
</LinearLayout>